; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_globals.c_xmlThrDefSetStructuredErrorFunc.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_globals.c_xmlThrDefSetStructuredErrorFunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xmlThrDefMutex = common dso_local global i32 0, align 4
@xmlStructuredErrorContextThrDef = common dso_local global i8* null, align 8
@xmlStructuredErrorThrDef = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xmlThrDefSetStructuredErrorFunc(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @xmlThrDefMutex, align 4
  %6 = call i32 @xmlMutexLock(i32 %5)
  %7 = load i8*, i8** %3, align 8
  store i8* %7, i8** @xmlStructuredErrorContextThrDef, align 8
  %8 = load i32, i32* %4, align 4
  store i32 %8, i32* @xmlStructuredErrorThrDef, align 4
  %9 = load i32, i32* @xmlThrDefMutex, align 4
  %10 = call i32 @xmlMutexUnlock(i32 %9)
  ret void
}

declare dso_local i32 @xmlMutexLock(i32) #1

declare dso_local i32 @xmlMutexUnlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
